--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -13,18 +13,17 @@
       ul {
         padding-left: 1em;
       }
-      &>ul>li {
+      li {
         list-style: none;
-        &::before {
-          content: "■";
-          margin-right: 10px;
-        }
-        &>ul>li {
-          list-style: none;
           &::before {
-            content: "□";
-            margin-right: 10px;
+            font-size: 0.9em;
+            margin-right: 3px;
           }
+      }
+      &>ul>li {
+        &::before { content: "■"; }
+        &>ul>li {
+          &::before { content: "□"; }
         }
       }
     }
@@ -39,9 +38,10 @@
     h2 {
       background-color: #ccc;
       margin-top: 0;
+      padding-left: 10px;
     }
     p {
-      margin-left: 5px;
+      margin-left: 10px;
     }
   }
 
