markdown table style

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,3 +12,22 @@ main {
     max-width: 100%;
   }
 }
+
+table.md-table {
+  border-collapse: collapse;
+  th,
+  td {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+  }
+
+  thead tr,
+  tbody tr:not(:last-child) {
+    border-bottom: 1px solid rgba(50, 50, 50, 0.3);
+  }
+  tbody tr:nth-child(odd) {
+    background-color: rgba(200, 200, 200, 0.2);
+  }
+}
