--- a/src/pages/fornewcomer.module.scss
+++ b/src/pages/fornewcomer.module.scss
@@ -2,32 +2,32 @@
   section {
     margin-bottom: 20px;
   }
-  h2, h3 {
+  h2,
+  h3 {
     margin-bottom: 20px;
   }
-
 }
 
 .headline1 {
-    width: 500px;
+  width: 500px;
   max-width: 100%;
-    color: #333333;
-    font-size: 30px;
-    font-weight: bold;
+  color: #333333;
+  font-size: 30px;
+  font-weight: bold;
   margin: 0 auto;
-    margin-bottom: 20px;
-    text-align: center;
-    border-bottom: 2px solid #444444;
+  margin-bottom: 20px;
+  text-align: center;
+  border-bottom: 2px solid #444444;
 }
 
 .headline2 {
-    width:120px;
-    color: #444444;
-    background: #c6e4ff;
-    border-bottom: 3px solid #aac5de;
-    text-align: center;
-    border-radius: 5px;
-    margin: 3px;
+  width: 120px;
+  color: #444444;
+  background: #c6e4ff;
+  border-bottom: 3px solid #aac5de;
+  text-align: center;
+  border-radius: 5px;
+  margin: 3px;
 }
 
 .shadowed_box {
@@ -42,21 +42,19 @@
 /* スケジュール箇条書き設定 */
 
 .list_sche_wrap {
-    list-style:  none;
-    margin:  0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .list_sche:before {
-    content:  "";
-    width:  10px;
-    height:  10px;
-    display:  inline-block;
-    background-color: #4682b4;
-    border-radius:  50%;
+  content: "";
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+  background-color: #4682b4;
+  border-radius: 50%;
 }
-
-
 
 .gallery {
   display: grid;
@@ -83,9 +81,9 @@
 
 /* ポップアップウインドウの設定 */
 .popup {
-  background-color: rgba(0, 0, 0, .8);
-  box-shadow: 0 0 0 9999px rgba(0, 0, 0, .8);
-  color: #FFF;
+  background-color: rgba(0, 0, 0, 0.8);
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.8);
+  color: #fff;
   display: none;
   position: fixed;
   top: 0;
@@ -99,7 +97,7 @@
 }
 
 /* ポップアップの内容 */
-.popup_content{
+.popup_content {
   margin: 40px auto 40px auto;
   height: 80%;
 }
