--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,7 +1,8 @@
 * {
   box-sizing: border-box;
 }
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -29,7 +30,6 @@ header {
   position: sticky;
   top: 0;
 
-
   #toplogo {
     grid-area: logo;
     padding: 0;
@@ -45,8 +45,7 @@ main {
 
 #layout_wrapper {
   background-color: #fff;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 main > article {
@@ -66,4 +65,3 @@ footer {
     margin: 0;
   }
 }
-
