--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -8,6 +8,7 @@ body {
   font-size: 16px;
   line-height: 1.8;
   color: #333;
+  font-family: sans-serif;
 }
 
 html {
@@ -33,9 +34,12 @@ header {
   #toplogo {
     grid-area: logo;
     padding: 0;
-    height: 5em;
     img {
-      height: 100%;
+      display: block;
+      max-height: 4em;
+      max-width: 100%;
+      height: auto;
+      width: auto;
     }
   }
 }
