--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,11 @@
 @import "./layout.scss";
 
+h1 { font-size: 2rem; font-weight: bold; }
+h2 { font-size: 1.5rem; font-weight: bold; }
+h3 { font-size: 1.3rem; font-weight: bold; }
+h4 { font-size: 1.2rem; font-weight: bold; }
+h5 { font-size: 1.1rem; font-weight: bold; }
+
 a {
   color: #0063ff;
   &:visited {
