--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,6 +1,8 @@
 ---
 import "@/styles/globals.scss";
 const { title } = Astro.props;
+
+const title_ = title ? `${title} - JA1ZLO Web` : "JA1ZLO Web";
 ---
 
 <!doctype html>
@@ -8,7 +10,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>{title}</title>
+    <title>{title_}</title>
   </head>
   <body>
     <div id="layout_wrapper">
