style: auto format

--- a/src/pages/fornewcomer/2.astro
+++ b/src/pages/fornewcomer/2.astro
@@ -80,9 +80,9 @@ import ImageStraight from "./_images/straight.webp";
                 [["K", "-.-"]],
               ],
             ] as [string, string][][][]
-          ).map(paragraph => (
+          ).map((paragraph) => (
             <p>
-              {paragraph.map(line => (
+              {paragraph.map((line) => (
                 <>
                   {line.map(([char, morse]) => (
                     <span>
