--- a/src/pages/fornewcomer/index.astro
+++ b/src/pages/fornewcomer/index.astro
@@ -235,32 +235,34 @@ type ImportedImage = Promise<typeof import("*.jpg") | typeof import("*.png")>;
       </p>
       <div class="gallery">
         {
-          ([
+          (
             [
-              import("./_images/gallery_antenna1.jpg"),
-              "駒場キャンパス内の学生会館。屋上に建っているアンテナは東大無線部所有のものです。",
-            ],
-            [
-              import("./_images/gallery_antenna2.jpg"),
-              "学生会館屋上のアンテナ拡大。部室からローテータを用いて回転させることができます。",
-            ],
-            [
-              import("./_images/gallery_contest1.jpg"),
-              "コンテスト中の交信風景。テキパキさばくにはテクニックが必要ですが、すぐに慣れます。",
-            ],
-            [
-              import("./_images/gallery_transceiver1.jpg"),
-              "東大無線部所有の無線機（IC-9700）。これとアンテナを同軸ケーブルで繋いで交信します。",
-            ],
-            [
-              import("./_images/gallery_field1.jpg"),
-              "8月に行われるフィールドデーコンテストの一風景。野外にアンテナを設置して交信します。",
-            ],
-            [
-              import("./_images/gallery_field2.jpg"),
-              "8月に行われるフィールドデーコンテストの一風景。腹が減っては戦は出来ぬ、ですね。",
-            ],
-          ] as [ImportedImage, string][]).map((e) => (
+              [
+                import("./_images/gallery_antenna1.jpg"),
+                "駒場キャンパス内の学生会館。屋上に建っているアンテナは東大無線部所有のものです。",
+              ],
+              [
+                import("./_images/gallery_antenna2.jpg"),
+                "学生会館屋上のアンテナ拡大。部室からローテータを用いて回転させることができます。",
+              ],
+              [
+                import("./_images/gallery_contest1.jpg"),
+                "コンテスト中の交信風景。テキパキさばくにはテクニックが必要ですが、すぐに慣れます。",
+              ],
+              [
+                import("./_images/gallery_transceiver1.jpg"),
+                "東大無線部所有の無線機（IC-9700）。これとアンテナを同軸ケーブルで繋いで交信します。",
+              ],
+              [
+                import("./_images/gallery_field1.jpg"),
+                "8月に行われるフィールドデーコンテストの一風景。野外にアンテナを設置して交信します。",
+              ],
+              [
+                import("./_images/gallery_field2.jpg"),
+                "8月に行われるフィールドデーコンテストの一風景。腹が減っては戦は出来ぬ、ですね。",
+              ],
+            ] as [ImportedImage, string][]
+          ).map((e) => (
             <div class="imagepopup_btn">
               <div class="btn_open">
                 <Image
@@ -291,7 +293,9 @@ type ImportedImage = Promise<typeof import("*.jpg") | typeof import("*.png")>;
 
   Array.from(btns).forEach((btn) => {
     btn.addEventListener("click", (e) => {
-      const img = (e.target as (HTMLElement | null))?.closest!("div")?.querySelector("img")!;
+      const img = (e.target as HTMLElement | null)?.closest!(
+        "div"
+      )?.querySelector("img")!;
       const comment = img.alt;
       const src = img.src;
       popup.innerHTML = `
