feat: update komafes74 page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Layout from "@/layouts/default.astro";
                   <a href="/allja1/index.html">ALL JA1コンテスト</a>
                 </li>
                 <li>
-                  <a href="/komafes74/">駒場祭</a>
+                  <a href="/komafes/74/">駒場祭</a>
                 </li>
                 <li>
                   <a href="/univ_onair_together">大学社団一斉オンエア月間</a>
