--- a/src/pages/komafes/74/index.astro
+++ b/src/pages/komafes/74/index.astro
@@ -18,7 +18,7 @@ import PosterImage from "./_images/poster.png";
       >
         第74回 駒場祭
       </a>
-      に出展いたします!
+      に出展しました。たくさんの方にご来場いただき、ありがとうございました。
     </p>
     <dl>
       <dt>日程</dt>
@@ -55,10 +55,16 @@ import PosterImage from "./_images/poster.png";
     <p>
       普段の部員の活動として行われる、アマチュア無線のほか電子工作やソフトウェア開発などについて紹介します。
     </p>
-    <h3>Coming soon...</h3>
     <h2>展示紹介ポスター</h2>
     <div>
       <Image id="poster" src={PosterImage} alt="" />
+    </div>
+    <h2>開催のようす</h2>
+    <div>
+      <Image src={import("./photos/20231124_140607.webp")} alt="新歓日程" />
+      <Image src={import("./photos/IMG_4555.webp")} alt="新歓日程" />
+      <Image src={import("./photos/IMG_1379.webp")} alt="新歓日程" />
+      <Image src={import("./photos/IMG_1363.webp")} alt="新歓日程" />
     </div>
   </article>
 </Layout>
