fix: correct alt

--- a/src/pages/komafes/74/index.astro
+++ b/src/pages/komafes/74/index.astro
@@ -61,10 +61,22 @@ import PosterImage from "./_images/poster.png";
     </div>
     <h2>開催のようす</h2>
     <div>
-      <Image src={import("./photos/20231124_140607.webp")} alt="新歓日程" />
-      <Image src={import("./photos/IMG_4555.webp")} alt="新歓日程" />
-      <Image src={import("./photos/IMG_1379.webp")} alt="新歓日程" />
-      <Image src={import("./photos/IMG_1363.webp")} alt="新歓日程" />
+      <Image
+        src={import("./photos/20231124_140607.webp")}
+        alt="体験交信のようす 433MHz帯で運用"
+      />
+      <Image
+        src={import("./photos/IMG_4555.webp")}
+        alt="教室前方、黒板。無線部の活動紹介ポスターが貼られている"
+      />
+      <Image
+        src={import("./photos/IMG_1379.webp")}
+        alt="教室入口に東大無線部の旗を掲げた"
+      />
+      <Image
+        src={import("./photos/IMG_1363.webp")}
+        alt="設置したアンテナ 7MHzのダイポール"
+      />
     </div>
   </article>
 </Layout>
