publish /qslpolicy page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,9 @@ const news_entries = (await getCollection("news"))
               <a href="/member">メンバー</a>
             </li>
             <li>
+              <a href="/qslpolicy">QSLカード発行ポリシー</a>
+            </li>
+            <li>
               イベント・コンテスト等
               <ul>
                 <li>
