--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,6 +132,10 @@ const news_entries = (await getCollection("news"))
 </Layout>
 
 <style>
+  h1 {
+    margin-top: 0;
+  }
+
   #article {
     width: 100% !important;
     max-width: none !important;
@@ -144,6 +148,7 @@ const news_entries = (await getCollection("news"))
     #main {
       flex-grow: 1;
       padding: 20px;
+      padding-top: 0;
 
       nav {
         ul {
