--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const news_entries = (await getCollection("news"))
               イベント・コンテスト等
               <ul>
                 <li>
-                  <a href="/allja1/index.html">ALL JA1コンテスト</a>
+                  <a href="/allja1/">ALL JA1コンテスト</a>
                 </li>
                 <li>
                   <a href="/komafes/75/">駒場祭</a>
